# chaoss_microtasks

./: README.md
microtask-0/: README.md
microtask-1/: README.md
microtask-10/: README.md
microtask-2/: README.md  REAMDE.md  github_backend.py  github_issues.json
microtask-2/git_backend/: git_backend.py  git_commits.json
microtask-2/github_backend/: github_backend.py
microtask-3/: README.md
microtask-4/: README.md
microtask-5/: README.md
microtask-5/files/: projects.json  setup.cfg
microtask-6/: README.md
microtask-7/: README.md
microtask-7/files/: projects.json  setup.cfg
microtask-8/: README.md  test_res.txt
microtask-9/: README.md
