[general]
short_name = Grimoire_second
update = false
min_update_delay = 10
debug = true
# /var/log/mordred/
logs_dir = logs
# Number of items per bulk request to Elasticsearch
bulk_size = 100
# Number of items to get from Elasticsearch when scrolling
scroll_size = 100
menu_file = ../../menu.yaml
aliases_file = ../../aliases.json

[es_collection]
# arthur = true
# arthur_url = http://127.0.0.1:8080
# redis_url = redis://localhost/8
url = https://admin:admin@localhost:9200

[es_enrichment]
url = https://admin:admin@localhost:9200

[sortinghat]
host = 127.0.0.1
user = root
password =
database = shdb
load_orgs = true
orgs_file = data/orgs_sortinghat.json
identities_api_token = 'xxxx'
identities_file = [data/perceval_identities_sortinghat.json]
affiliate = true
# commonly: Unknown
unaffiliated_group = Unknown
autoprofile = [customer,git,github]
matching = [email]
sleep_for = 120

[panels]
kibiter_time_from= "now-30y"
kibiter_default_index= "git"
kibiter_url = http://admin:admin@localhost:5601
community = true
github-repos = true

[phases]
collection = true
identities = true
enrichment = true
panels = true

[projects]
projects_file = ./projects_mine.json

[git]
raw_index = git_folio_new
enriched_index = git_folio_enriched_new
latest-items = true
category = commit
studies = [enrich_demography:git, enrich_areas_of_code:git, enrich_onion:git]

[enrich_demography:git]
date_field = utc_commit
author_field = author_uuid

[enrich_areas_of_code:git]
#no_incremental = true
in_index = git_folio_new
out_index = git-aoc_folio_enriched_new

[enrich_onion:git]
in_index = git_folio_enriched_new
out_index = git-onion_folio_enriched_new
contribs_field = hash
no_incremental = false

[github]
raw_index = github_folio_issue
enriched_index = github_folio_issue_enriched
api-token = 
sleep-for-rate = true
no-archive = true
category = issue
sleep-time = 300
studies = [enrich_onion:github]

[github:pull]
raw_index = github_pull_folio
enriched_index = github_pull_folio_enriched
api-token = 
sleep-for-rate = true
no-archive = true
category = pull_request
sleep-time = 300
studies = [enrich_onion:github]

#removed the github:repo part

[enrich_onion:github]
#no_incremental = true
in_index_iss = github_folio_issue_enriched
in_index_prs = github_pull_folio_enriched
out_index_iss = github_folio_onion-enriched
out_index_prs = github_prs_onion-enriched
data_source_iss = github-issues
data_source_prs = github-prs

[dockerhub]
raw_index = dockerhub_raw
enriched_index = dockerhub_enriched
no-archive = true (suggested)


